packages/apps/esm-login-app/src/login/login.scss
@use '@carbon/layout';
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

.bodyShort01 {
  @include type.type-style('body-compact-01');
}

.productiveHeading03 {
  @include type.type-style('heading-03');
}

.label01 {
  @include type.type-style('label-01');
}

.caption01 {
  @include type.type-style('legal-01');
}

.backButton {
  height: layout.$spacing-09;
  padding-left: 0;

  svg {
    margin-right: layout.$spacing-03;
    order: 1;
  }

  span {
    order: 2;
  }
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  min-height: 100vh;
  margin-top: 0;
}

.center {
  text-align: center;
}

.logo {
  margin-bottom: layout.$spacing-08;
  height: layout.$spacing-11;
  width: 14rem;
}

.logoImg {
  max-width: 100%;
}

.poweredByTxt {
  @extend .caption01;
  text-align: center;
  color: $color-gray-70;
  color: $text-02;
}

.needHelp {
  display: flex;
  width: 23rem;
}

.needHelpText {
  @extend .bodyShort01;
  text-align: left;
  color: $text-02;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: layout.$spacing-05 0;
}

.link {
  text-decoration-line: none;
  margin-left: layout.$spacing-03;
}

.loginCard {
  border-radius: 0;
  border: 1px solid $ui-03;
  background-color: $ui-02;
  width: 23rem;
  padding: layout.$spacing-08;
  border-radius: layout.$spacing-03;
  position: relative;
  min-height: fit-content;
}

@media only screen and (min-width: 481px) {
  .container {
    min-height: 100vh;
  }
}

@media only screen and (max-width: 1024px) {
  .container {
    min-height: 100vh;
  }
}

@media only screen and (max-width: 480px) {
  .container {
    min-height: 100vh;
  }
}

.inputGroup {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  width: 18rem;
  gap: layout.$spacing-05;

  :global(.cds--text-input) {
    height: layout.$spacing-09;
    @extend .label01;
  }

  :global(.cds--text-input__field-outer-wrapper) {
    width: 18rem;
  }

  &:not(:last-child) {
    margin-bottom: layout.$spacing-05;
  }
}

.continueButton {
  margin-top: layout.$spacing-06;
  width: 18rem;
}

.backButtonDiv {
  width: 23rem;
  position: absolute;
  bottom: 100%;
  left: 0;
}

.loader {
  min-height: fit-content;
}

.errorMessage {
  width: 23rem;
  margin-bottom: layout.$spacing-09;
  position: absolute;
  bottom: 100%;
  left: 0;
}

.flagContainer {
  position: absolute;
  top: layout.$spacing-02;
  left: layout.$spacing-02;
  z-index: 1001;
  padding: layout.$spacing-02;
  width: 60px;
  height: 40px;
}

